glass and liquid are complete

--- a/index.html
+++ b/index.html
@@ -7,17 +7,47 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="stars" style="top: 316px; left: 45%;"></div>
+    <div class="stars" style="top: 326px; left: 55%;"></div>
+    <div class="stars" style="top: 336px; left: 35%;"></div>
+    <div class="glitter" style="top: 280px; left: 20px;"></div>
+    <div class="glitter" style="top: 220px; left: 50px;"></div>
+    <div class="glitter" style="top: 280px; left: 120px;"></div>
+    <div class="glitter" style="top: 350px; left: 90px;"></div>
+    <div class="glitter" style="top: 220px; left: 150px;"></div>
+    <div class="glitter" style="top: 280px; left: 220px;"></div>
+    <div class="glitter" style="top: 350px; left: 190px;"></div>
+    <div class="glitter" style="top: 220px; left: 250px;"></div>
+    <div class="glitter" style="top: 280px; left: 320px;"></div>
+    <div class="glitter" style="top: 350px; left: 290px;"></div>
     <div class="glass">
-        <div class="fluid"></div>
-        <div class="straw"></div>
+        <div class="glass-layer-bottom"></div>
+        <div class="glass-layer-base-left"></div> 
+        <div class="glass-layer-base-right"></div> 
+        <div class="glass-layer-base-main"></div> 
+
+        <div class="glass-layer"></div> 
+        <div class="ice-cube" style="top: 50%; left: 38%;"></div>
+        <div class="ice-cube" style="top: 56%; left: 53%; transform: rotate(-10deg);"></div>
+        <div class="ice-cube" style="top: 63%; left: 42%; transform: rotate(5deg);"></div>
+        <div class="fluid-container">
+            <div class="fluid-glow"></div>
+            <div class="fluid-bottom"></div>
+            <div class="fluid-main"></div>
+            <div class="fluid-top"></div>
+            <div class="fluid">
+                <div class="fluid-edge"></div>
+            </div>
+        </div>
+        <div class="straw-container">
+            <div class="straw-base "></div>
+            <div class="straw-bend "></div>
+            <div class="straw-top "></div>
+        </div>
+
+        
         <div class="stem"></div>
         <div class="base"></div>
-    </div>
-    <div class="glitter" style="top: 20px; left: 50px;"></div>
-    <div class="glitter" style="top: 80px; left: 120px;"></div>
-    <div class="glitter" style="top: 150px; left: 90px;"></div>
-    <div class="stars" style="top: 100px; left: 50%;"></div>
-    <div class="stars" style="top: 110px; left: 60%;"></div>
-    <div class="stars" style="top: 120px; left: 40%;"></div>
+    </div>   
 </body>
 </html>
