changed the cubes, changed the straw fixed the glass

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             </div>
         </div>
         <div class="straw-container">
-            <div class="straw-base "></div>
+            <div class="straw-base-dry "></div>
+            <div class="straw-base-liquid "></div>
             <div class="straw-bend "></div>
             <div class="straw-top "></div>
         </div>
