straw cut fixes

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class="straw-base-liquid "></div>
             <div class="straw-bend "></div>
             <div class="straw-top "></div>
+            <div class="straw-blend-dry"></div>
         </div>
 
         
