stars and glitters precentage for bigger screen

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="stars" style="top: 316px; left: 45%;"></div>
-    <div class="stars" style="top: 326px; left: 55%;"></div>
-    <div class="stars" style="top: 336px; left: 35%;"></div>
-    <div class="glitter" style="top: 280px; left: 20px;"></div>
-    <div class="glitter" style="top: 220px; left: 50px;"></div>
-    <div class="glitter" style="top: 280px; left: 120px;"></div>
-    <div class="glitter" style="top: 350px; left: 90px;"></div>
-    <div class="glitter" style="top: 220px; left: 150px;"></div>
-    <div class="glitter" style="top: 280px; left: 220px;"></div>
-    <div class="glitter" style="top: 350px; left: 190px;"></div>
-    <div class="glitter" style="top: 220px; left: 250px;"></div>
-    <div class="glitter" style="top: 280px; left: 320px;"></div>
-    <div class="glitter" style="top: 350px; left: 290px;"></div>
+    <div class="stars" style="top: 27%;left: 45%;"></div>
+    <div class="stars" style="top: 30%;left: 50%;"></div>
+    <div class="stars" style="top: 33%;left: 42%;"></div>
+    <div class="glitter" style="top: 31%; left: 17%;"></div>
+    <div class="glitter" style="top: 24%; left: 28%;"></div>
+    <div class="glitter" style="top: 31%; left: 40%;"></div>
+    <div class="glitter" style="top: 38%; left: 23%;"></div>
+    <div class="glitter" style="top: 24%; left: 59%;"></div>
+    <div class="glitter" style="top: 31%; left: 69%;"></div>
+    <div class="glitter" style="top: 38%; left: 54%;"></div>
+    <div class="glitter" style="top: 24%; left: 80%;"></div>
+    <div class="glitter" style="top: 31%; left: 90%;"></div>
+    <div class="glitter" style="top: 38%;left: 85%;"></div>
     <div class="glass">
         <div class="glass-layer-bottom"></div>
         <div class="glass-layer-base-left"></div> 
