--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+   
+    <div class="holy-grail-text">The Holy Grail</div>
+
     <div class="stars" style="top: 27%;left: 45%;"></div>
     <div class="stars" style="top: 30%;left: 50%;"></div>
     <div class="stars" style="top: 33%;left: 42%;"></div>
@@ -21,15 +24,20 @@
     <div class="glitter" style="top: 31%; left: 90%;"></div>
     <div class="glitter" style="top: 38%;left: 85%;"></div>
     <div class="glass">
+        <div class="light-rays">
+            <div class="ray ray1"></div>
+            <div class="ray ray2"></div>
+            <div class="ray ray3"></div>
+        </div>    
         <div class="glass-layer-bottom"></div>
         <div class="glass-layer-base-left"></div> 
         <div class="glass-layer-base-right"></div> 
         <div class="glass-layer-base-main"></div> 
 
         <div class="glass-layer"></div> 
-        <div class="ice-cube" style="top: 50%; left: 38%;"></div>
-        <div class="ice-cube" style="top: 56%; left: 53%; transform: rotate(-10deg);"></div>
-        <div class="ice-cube" style="top: 63%; left: 42%; transform: rotate(5deg);"></div>
+        <div class="ice-cube" style="top: 30%; left: 38%;"></div>
+        <div class="ice-cube" style="top: 36%; left: 53%; transform: rotate(-10deg);"></div>
+        <div class="ice-cube" style="top: 43%; left: 42%; transform: rotate(5deg);"></div>
         <div class="fluid-container">
             <div class="fluid-glow"></div>
             <div class="fluid-bottom"></div>
@@ -38,6 +46,9 @@
             <div class="fluid">
                 <div class="fluid-edge"></div>
             </div>
+            <img src="cherry.png" alt="Cherry Slice" class="cherry-slice">
+            <img src="orange.png" alt="Orange Slice" class="orange-slice4">
+
         </div>
         <div class="straw-container">
             <div class="straw-base-dry "></div>
